kubernetes/apps/radarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: radarr
  annotations:
    external-dns.kubernetes.io/target: <path:cloudflared:tunnel-config#tunnel-target>
    external-dns.kubernetes.io/cloudflare-proxied: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`movies.<path:cert-manager:domain-config#domain>`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
  tls: {}
